WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275741
REGRESSION (
279833@main
): webrtc/vp8-then-h264-gpu-process-crash.html is consistently crashing
https://bugs.webkit.org/show_bug.cgi?id=275741
Summary
REGRESSION (279833@main): webrtc/vp8-then-h264-gpu-process-crash.html is cons...
Anfernee Viduya
Reported
2024-06-21 11:16:54 PDT
webrtc/vp8-then-h264-gpu-process-crash.html the test is crashing on all platforms. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fvp8-then-h264-gpu-process-crash.html
STDERR: (video_send_stream_impl.cc:195): ERROR: Initial encoder max bitrate = -1 which is <= 0! (video_send_stream_impl.cc:195): ERROR: Initial encoder max bitrate = -1 which is <= 0! com.apple.WebKit.GPU.Development terminated (pid 0) for reason: crash LEAK: 1 WebPageProxy REPRODUCIBILITY: I tried to reproduce this using iOS 17.5 simulator but was only able to get a constant time out. REGRESSION: Based on the information in the results database, this appears to have regressed at
279833@main
. While I was unable to confirm on local testing, the changes at that point appear to be directly related to the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-21 11:17:03 PDT
<
rdar://problem/130288947
>
EWS
Comment 2
2024-06-21 11:38:56 PDT
Test gardening commit
280254@main
(2adb863208ae): <
https://commits.webkit.org/280254@main
> Reviewed commits have been landed. Closing PR #30052 and removing active labels.
Anfernee Viduya
Comment 3
2024-06-21 11:48:55 PDT
I was able to reproduce this Sonoma 14.5. ToT with the following command run-webkit-tests -v --debug webrtc/vp8-then-h264-gpu-process-crash.html --iterations 10
Kimmo Kinnunen
Comment 4
2024-06-27 02:57:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30190
Kimmo Kinnunen
Comment 5
2024-06-27 03:09:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30227
EWS
Comment 6
2024-06-28 03:54:23 PDT
Committed
280452@main
(b7f69a1c3709): <
https://commits.webkit.org/280452@main
> Reviewed commits have been landed. Closing PR #30227 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug