REGRESSION (279833@main): webrtc/vp8-then-h264-gpu-process-crash.html is consistently crashing https://bugs.webkit.org/show_bug.cgi?id=275741 rdar://130288947

Reviewed by Matt Woodrow.

The test would terminate GPU process.
Due WebRTC doing capture, it UI would restart the GPU process.
If WCP was in process of doing IPC sends, the termination would would
cause unresponsiveness event in WCP.
The unresponsiveness termination would intend to terminate the previous
process, but would actually terminate the new process.

Fix by associating the unresponsiveness call with
GPUProcessConnectionIdentifier.

* Source/WebKit/Scripts/webkit/messages.py:
(serialized_identifiers):
* Source/WebKit/Shared/WTFArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::createGPUProcessConnection):
(WebKit::WebProcessProxy::gpuProcessConnectionDidBecomeUnresponsive):
(WebKit::WebProcessProxy::gpuProcessExited):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.h:
(WebKit::GPUProcessConnection::identifier const):
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::ensureGPUProcessConnection):
(WebKit::WebProcess::gpuProcessConnectionDidBecomeUnresponsive):

Canonical link: https://commits.webkit.org/280452@main